# metablock-py

./: .coveragerc  .gitignore  LICENSE  MANIFEST.in  Makefile  pyproject.toml  readme.md  setup.cfg  setup.py
.dev/: install  lint
.github/workflows/: build.yml  update.yml
blocks/: sport.yaml
dev/: agile.json  install  lint  requirements-test.txt  requirements.txt  run-black
metablock/: __init__.py  cli.py  client.py  components.py  extensions.py  orgs.py  spaces.py  user.py  utils.py
tests/: conftest.py  test_cli.py  test_client.py  test_spaces.py
tests/blocks/: test.yaml
