[tool.poetry]
name = "metablock"
version = "0.9.0"
description = "Metablock cloud python client"
authors = ["Luca <luca@quantmind.com>"]
license = "BSD"
readme = "readme.md"

[tool.poetry.dependencies]
python = ">=3.11"
click = "^8.1.7"
pyyaml = "^6.0.2"
httpx = "^0.28.1"
multidict = "^6.1.0"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.25.3"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
mypy = "^1.12.0"
black = "^25.1.0"
isort = "^6.0.0"
python-dotenv = "^1.0.0"
types-pyyaml = "^6.0.12.20240917"
ruff = "^0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
metablock = "metablock.cli:main"


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests"
]

[tool.ruff]
lint.select = ["A", "E", "W", "F", "I", "B", "N"]
line-length = 88

[tool.mypy]
disallow_untyped_calls = true
warn_return_any = false
disallow_untyped_defs = true
warn_no_return = true


[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
