[tool.poetry]
name = "metablock"
version = "1.0.0"
description = "Metablock cloud python client"
authors = ["Luca <luca@quantmind.com>"]
license = "BSD"
readme = "readme.md"

[tool.poetry.dependencies]
python = ">=3.11"
click = "^8.1.7"
pyyaml = "^6.0.2"
httpx = "^0.28.1"
multidict = "^6.4.3"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.26.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.0"
python-dotenv = "^1.1.0"
types-pyyaml = "^6.0.12.20240917"
ruff = "^0.11.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
metablock = "metablock.cli:main"


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
testpaths = ["tests"]

[tool.ruff]
lint.select = ["A", "E", "W", "F", "I", "B", "N"]
line-length = 88

[tool.mypy]
disallow_untyped_calls = true
warn_return_any = false
disallow_untyped_defs = true
warn_no_return = true


[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
